# custom-sin

./: .gitignore  CMakeLists.txt  README.md  custom_sin.cpp
include/: func.h
src/: func.cpp  main.cpp  viz.py
